--- a/index.html
+++ b/index.html
@@ -1,231 +1,209 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>
-    Parivartan
-  </title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="mystyle.css">
-  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-    crossorigin="anonymous"></script>
-
-  <script src="script.js"></script>
-
-  <script src="https://code.responsivevoice.org/responsivevoice.js?key=OO0U3GC6"></script>
-  <meta name="viewport" content="width=device-width">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bhartiya Janta Party</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div class="header">
-    <div class="logo">
-      <img alt="Government of India Emblem" height="50" src="./assets/logo.png" />
+    <div class="container">
+        <div class="row">
+            <div class="col d-flex">
+                <img src="bjplogo.jpeg" height="50px" width="50px" alt="">
+                <h5 class="mx-2 mt-2">Bhartiya Janta Party</h5>
+            </div>
+            <div class="col-6">
+                <div class="container">
+                    <div class="row d-flex">
+                        <div class="col-2">
+                            <i class="fa-solid fa-handshake-angle"></i>
+                            <h5>help</h5>
+                        </div>
+                        <div class="col-2">
+                            <i class="fa-solid fa-gear"></i>
+                            <h5>contact</h5>
+                        </div>
+                        <div class="col-2">
+                            <i class="fa-solid fa-address-card"></i>
+                            <h5>contact</h5>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+            <div class="col">
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>select language</option>
+                    <option value="hindi"></option>
+                    <option value="english">Two</option>
+                    <option value="atrabic">Three</option>
+                </select>
+                <h5>powered by google translate</h5>
+            </div>
+        </div>
     </div>
-    <div class="right-title">
-      <div class="icons">
-        <i class="fas fa-book"><br>Help</i>
-        <i class="fas fa-cogs"><br> Setting</i>
-        <!-- <i class="fas fa-university"></i> -->
-        <i class="fas fa-users"><br>Contact</i>
-        <!-- <i class="fas fa-globe"><br> gy</i> -->
+    <nav class="navbar bg-primary bg-body-warning">
+        <div class="container-fluid">
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+    <div id="carouselExampleCaptions" class="carousel slide mt-2 mx-10 mb-2">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="carouselbjp1.jpeg" class="d-block h-50 w-100" height="800px" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="carouselbjp2.avif" class="d-block w-100 h-25" height="800px" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="carouselbjp3.jpg" class="d-block w-100" height="800px" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <div class="text-bg-primary p-3 d-flex">
+        <img src="bjplogo2.jpeg" style="padding-left: 500px;" alt="">
+        <div class="container">
+            <h5>hamara uddeshya</h5>
+            <p>vikaas,samanta aur ekta</p>
+            <h6>naiyya badi karrari hai bjp sab pe bhari hai</h6>
+        </div>
+    </div>
+    <div class="container text-center">
+        <h1>frequently asked questions</h1>
+    </div>
+    <div class="container mt-5 d-flex">
+        <div class="container">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                      ask?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">kyo bataye</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                      ask?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">kyo bataye.</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                      ask?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">kyo bataye.</div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        <div class="container">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                      Ask ?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">kyo bataye.</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                      ask?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">kyo bataye.</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                      ask ?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">kyo bataye.</div>
+                  </div>
+                </div>
+              </div>
+        </div>
+    </div>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+        <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Company, Inc</span>
       </div>
-    </div>
-    <div id="google_translate_element"></div>
-  </div>
-  </div>
-  <!-- <div class="container">
+  
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><a class="text-body-secondary" href="#"><svg <i class="bi bi-instagram"></i> width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+        <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+      </ul>
+    </footer>
     
-    <label for="languageSelect">Select Language:</label>
-    <select id="languageSelect">
-        <option value="en-US">English</option>
-        <option value="hi-IN">Hindi</option>
-    </select>
-    <br><br>
-
-    <button onclick="readContent()">Read All Content</button>
-    <button onclick="stopSpeech()">Stop Reading</button>
-</div> -->
-
-
-  <div class="search-bar">
-    <input placeholder="Search - Keyword, Phrase" type="text" />
-    <button>
-      Search
-    </button>
-  </div>
-  <div class="carousel">
-    <input type="radio" name="carousel" id="slide1" checked>
-    <input type="radio" name="carousel" id="slide2">
-    <input type="radio" name="carousel" id="slide3">
-    <input type="radio" name="carousel" id="slide4">
-    <input type="radio" name="carousel" id="slide5">
-
-    <div class="slides">
-      <div class="slide" id="s1">
-        <img src="./assets/2.webp" alt="img1">
-      </div>
-      <div class="slide" id="s2">
-        <img src="./assets/1.webp" alt="img2">
-      </div>
-      <div class="slide" id="s3">
-        <img src="./assets/3.webp" alt="img3">
-      </div>
-      <div class="slide" id="s4">
-        <img src="./assets/4.webp" alt="img4">
-      </div>
-      <div class="slide" id="s5">
-        <img src="./assets/5.webp" alt="img5">
-      </div>
-    </div>
-    <div class="navigation">
-      <label for="slide1"></label>
-      <label for="slide2"></label>
-      <label for="slide3"></label>
-      <label for="slide4"></label>
-      <label for="slide5"></label>
-    </div>
-  </div>
-  </div>
-  <div class="main-content">
-    <div class="banner">
-      <img alt="Jeevan Pramaan Logo" height="100"
-        src="https://storage.googleapis.com/a1aa/image/B0J7JPC6mO7wAlDUtPtjEmRf8Gq8pYkYuZawomw1q1oURw8JA.jpg"
-        width="100" />
-      <div class="text">
-        <h2>
-          JEEVAN PRAMAAN
-        </h2>
-        <p>
-          Digital Life certificate for pensioners
-        </p>
-      </div>
-    </div>
-    <div class="container2">
-      <h1>ACT & RULES</h1>
-
-      <div class="grid">
-        <div class="card">
-          <div class="card-title">Policy</div>
-          <a href="#" class="card-link">Click here</a>
-        </div>
-        <div class="card">
-          <div class="card-title">Integrated Nutrient Management</div>
-          <a href="#" class="card-link">Click here</a>
-        </div>
-        <div class="card">
-          <div class="card-title">Agricultural Marketing</div>
-          <a href="#" class="card-link">Click here</a>
-        </div>
-        <div class="card">
-          <div class="card-title">Agricultural Marketing</div>
-          <a href="#" class="card-link">Click here</a>
-        </div>
-        <div class="card">
-          <div class="card-title">Agricultural Marketing</div>
-          <a href="#" class="card-link">Click here</a>
-        </div>
-        <div class="card">
-          <div class="card-title">Agricultural Marketing</div>
-          <a href="#" class="card-link">Click here</a>
-        </div>
-      </div>
-    </div>
-    <div class="sections">
-      <div class="section">
-        <h3>
-          News Highlights
-        </h3>
-        <ul>
-          <li>
-            <a href="#">
-              Union Home Minister and Minister of Cooperation Shri Amit Shah...
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              Union Cabinet Approves Signing of MoU between GSI and CNR-IRPI...
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>
-          Most Requested Information &amp; Forms
-        </h3>
-        <ul>
-          <li>
-            <a href="#">
-              Commissionerate of Municipal Administration of Tamil Nadu
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              Website of Council of Scientific and Industrial Research
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              Report on trend and progress of banking in India
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              Website of National Innovation Foundation
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>
-          Activities &amp; Initiatives
-        </h3>
-        <ul>
-          <li>
-            <a href="https://www.ncbmanas.gov.in/" target="_blank">
-              MANAS - National Narcotics Helpline
-            </a>
-          </li>
-          <li>
-            <a href="https://pmfby.gov.in/" target="_blank">
-              Pradhan Mantri Fasal Bima Yojana (PMFBY)
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="sticky-bottom-right chatbot">
-    <i class="fas fa-robot"></i>
-  </div>
-
-  <div class="footer">
-    © 2024 PARIVARTAN. All rights reserved.
-  </div>
-  <div class="chatbox" style="display: none;">
-    <div class="header_chatbox">
-      <button class="close_chatbox"><i class="fas fa-times"></i></button>
-    </div>
-    <div class="messages">
-      <div class="bot">Hi, I am a Krishi Chatbot, You can ask anything related to farming with me.
-        I am ready, put your questions.
-      </div>
-    </div>
-    <div class="inputs">
-      <form action="">
-        <input type="text" placeholder="type your query..." class="query" name="query" id="query">
-        <button class="send"><i class="fas fa-paper-plane"></i></button>
-      </form>
-    </div>
-  </div>
-  <script>
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement(
-        { pageLanguage: 'en' },
-        'google_translate_element'
-      );
-    }
-  </script>
-  <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 
 </html>
